--- a/app/assets/stylesheets/welcome.scss
+++ b/app/assets/stylesheets/welcome.scss
@@ -1,24 +1,11 @@
-h1 {
-  color: red;
-}
-
-#index-title {
+.social-btn {
+  color: black;
+  background-color: #00aced
   text-align: center;
-  font-size: 15px;
-  color: blue;
-}
-
-.posts {
-  border: solid;
-  margin: 5px;
-  padding: 5px;
-  height: 200px;
-}
-
-section {
-  background: #5998ff;
+  height: 35px;
+  width: 1500px;
+  padding: 7.5 7.5 7.5 7.5;
+  border-width: thin;
   border-style: solid;
-  border-width: 5px;
-  margin: 5px 5px 5px 5px;
-  padding: 5px 5px 5px 5px;
+  border-color: #610B21;
 }
