--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -10,14 +10,16 @@
     <p><%= @post.body %></p>
 
     <div>
-       <h3>Comments</h3>
-       <%= render @post.comments %>
-     </div>
+      <h3>Comments</h3>
+      <%= render @post.comments %>
+    </div>
 
       <% if current_user %>
-      <%= render 'comments_form', comment: Comment.new, post: @post %>
+      <%= render 'comments/form', comment: Comment.new, post: @post %>
       <% end %>
   </div>
+
+
   <div class="col-md-4">
 <!-- #5 -->
 <% if user_is_authorized_for_post?(@post) %>
