CP42 - can't view labels

--- a/app/views/topics/new.html.erb
+++ b/app/views/topics/new.html.erb
@@ -9,7 +9,7 @@
       <li>Smile when you type.</li>
     </ul>
   </div>
-  <div class="col-md-8">
-    <%= render partial: 'form', locals: { topic: @topic } %>
+  <div class="form-group">
+    <%= render partial: 'labels/form', locals: { r: r, labels: @topic.labels } %>
   </div>
 </div>
