--- a/app/views/topics/edit.html.erb
+++ b/app/views/topics/edit.html.erb
@@ -9,7 +9,8 @@
       <li>Smile when you type.</li>
     </ul>
   </div>
-  <div class="col-md-8">
-    <%= render partial: 'form', locals: { topic: @topic } %>
-  </div>
+  <div class="form-group">
+  <%= render partial: 'labels/form', locals: { f: f, labels: @topic.labels } %>
+</div>
+
 </div>
