--- a/app/views/labels/show.html.erb
+++ b/app/views/labels/show.html.erb
@@ -15,3 +15,21 @@
     <% end %>
   </div>
 </div>
+
+<div class="row">
+  <div class="col-md-8">
+    <h1>Comment: <%= @comment.body %></h1>
+<!-- #29 -->
+    <% @comment.topics.each do |topic| %>
+      <div>
+        Topic: <%= link_to topic.name, topic %>
+      </div>
+    <% end %>
+<!-- #30 -->
+    <% @comment.posts.each do |post| %>
+      <div>
+        Post: <%= link_to post.title, topic_post_path(post.topic, post) %>
+      </div>
+    <% end %>
+  </div>
+</div>
