--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -13,4 +13,10 @@
   <div class="col-md-8">
     <%= render partial: 'form', locals: { topic: @topic, post: @post } %>
   </div>
+
+  <div class="form-group">
+    <%= f.label :body, class: 'sr-only' %>
+    <%= f.text_field :body, class: 'form-control', placeholder: "Enter a new comment" %>
+  </div>
+  <%= f.submit "Submit Comment", class: 'btn btn-default pull-right' %>
 </div>
