--- a/app/views/topics/edit.html.erb
+++ b/app/views/topics/edit.html.erb
@@ -13,4 +13,10 @@
   <%= render partial: 'labels/form', locals: { f: f, labels: @topic.labels } %>
 </div>
 
+<div class="form-group">
+  <%= f.label :body, class: 'sr-only' %>
+  <%= f.text_field :body, class: 'form-control', placeholder: "Enter a new comment" %>
+</div>
+<%= f.submit "Submit Comment", class: 'btn btn-default pull-right' %>
+
 </div>
