--- a/app/views/topics/new.html.erb
+++ b/app/views/topics/new.html.erb
@@ -12,4 +12,10 @@
   <div class="form-group">
     <%= render partial: 'labels/form', locals: { r: r, labels: @topic.labels } %>
   </div>
+
+  <div class="form-group">
+    <%= f.label :body, class: 'sr-only' %>
+    <%= f.text_field :body, class: 'form-control', placeholder: "Enter a new comment" %>
+  </div>
+  <%= f.submit "Submit Comment", class: 'btn btn-default pull-right' %>
 </div>
