CP44_assignment_REV

--- a/app/views/favourite_mailer/new_post.text.erb
+++ b/app/views/favourite_mailer/new_post.text.erb
@@ -1,1 +1,1 @@
-You are now following "<%= @post.title %>, you will be emailed any changes or updates to your followed posts.  You can unfavourite the post if you want the emails to stop by clicking this link: <%= link_to "post", topic_post_url(@post.topic, @post) %>.</h1>
+HI, you are now following "<%= @post.title %>, you will be emailed any changes or updates to your followed posts.  You can unfavourite the post if you want the emails to stop by clicking this link: <%= link_to "post", topic_post_url(@post.topic, @post) %>.</h1>
