--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -26,7 +26,7 @@
     </div>
 
       <% if current_user %>
-      <%= render 'comments/form', comment: Comment.new, post: @post %>
+      <%= render partial: 'comments/form', locals: {comment: Comment.new, post: @post} %>
       <% end %>
   </div>
 
@@ -37,21 +37,3 @@
 <%= link_to "Edit", edit_topic_post_path(@post.topic, @post), class: 'btn btn-success' %>
  <%= link_to "Delete Post", [@post.topic, @post], method: :delete, class: 'btn btn-danger', data: { confirm: 'Are you sure you want to delete this post?' } %>
 <% end %>
-
-<div class="col-md-4">
-     <h3>
-       <%= pluralize(@post.points, 'point') %>
-       <div>
-         <small>
-           <%= pluralize(@post.up_votes, 'up vote') %>,
-           <%= pluralize(@post.down_votes, 'down vote') %>
-         </small>
-       </div>
-     </h3>
-
-     <% if current_user %>
-       <%= render partial: 'favourites/favourite', locals: { post: @post } %>
-     <% end %>
-   </div>
-
-</div>
