--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -22,11 +22,11 @@
 
     <div>
       <h3>Comments</h3>
-      <%= render @post.comments %>
+      <%= render partial: "comments/comment", locals: { comments: @post.comments, parent: @post} %>
     </div>
 
       <% if current_user %>
-      <%= render partial: 'comments/form', locals: {comment: Comment.new, post: @post} %>
+      <%= render partial: 'comments/form', locals: {comment: Comment.new, parent: @post} %>
       <% end %>
   </div>
 
