--- a/app/views/topics/show.html.erb
+++ b/app/views/topics/show.html.erb
@@ -28,6 +28,23 @@
 
         </div>
       </div>
+
+      <div class="row">
+        <div class="col-md-8">
+          <p><%= @topic.description %></p>
+
+          <div>
+            <h3>Comments</h3>
+            <%= render partial: "comments/comment", locals: { comments: @topic.comments, parent: @topic} %>
+          </div>
+
+            <% if current_user %>
+            <%= render partial: 'comments/form', locals: {comment: Comment.new, parent: @topic} %>
+            <% end %>
+        </div>
+
+
+
     <% end %>
   </div>
 
